--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+buildscript {
+  // ext[hibernate.version'] = '5.2.8.Final'
+}
+
 plugins {
   id 'org.springframework.boot' version '2.2.1.RELEASE'
   id 'io.spring.dependency-management' version '1.0.8.RELEASE'
@@ -21,6 +25,10 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'mysql:mysql-connector-java:6.0.5'
+  runtime 'com.h2database:h2:1.4.193'
+
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
