--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
+# Use H2 Console
+spring.h2.console.enabled=true
