--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,14 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 # Use H2 Console
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+#DataSource
+spring.datasource.url=jdbc:mysql://localhost/blog
+spring.datasource.username=tao
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
