--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
   implementation 'mysql:mysql-connector-java:8.0.18'
   runtime 'com.h2database:h2:1.4.193'
 
+  implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+  implementation 'net.java.dev.jna:jna:4.3.0'
+
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
