--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#ElasticSearch host
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+#Set connection timeout
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
